--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,42 @@
 :root {
   --red: #ae0000;
+  --icon-size: 76px;
 }
 
-.container {
-  min-width: 1200px;
+body {
+  font-family: arial, sans-serif;
 }
+
+h1 {
+  font-size: 32px;
+  line-height: 36px;
+  margin-bottom: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  color: var(--bs-gray-600);
+  line-height: 20px;
+}
+
 .content {
   margin: 80px auto;
-  width: 45%;
+  max-width: 600px;
 }
 
-.secondary-info {
-  color: var(--bs-gray-600);
+.weather-now img {
+  width: var(--icon-size);
+  height: var(--icon-size);
 }
 
-.degree-sign {
-  position: relative;
-  top: -1.5rem;
-}
-
-.degree-sign a {
-  text-decoration: none;
-}
-
-.weather li {
-  list-style: none;
+.temperature {
+  line-height: 1;
+  font-size: 68px;
 }
 
 .disabled {
@@ -34,4 +46,11 @@
 
 .error {
   color: var(--red);
+}
+
+.scale {
+  position: relative;
+  display: inline-block;
+  top: -38px;
+  left: -5px;
 }
